src/PdfRendererControls.scss
.renderer-controls {
  height: 32px;
  box-shadow: inset 0 1px 1px hsla(0, 0%, 0%, 0.15),
    inset 0 -1px 0 hsla(0, 0%, 100%, 0.05), 0 1px 0 hsla(0, 0%, 0%, 0.15),
    0 1px 1px hsla(0, 0%, 0%, 0.1);
  background-color: #474747;
  background-image: url('assets/texture.png'),
    linear-gradient(hsla(0, 0%, 32%, 0.99), hsla(0, 0%, 27%, 0.95));
  display: flex;
  flex: 0 0 32px;
  justify-content: space-around;
  z-index: 2;

  .button-group {
    padding: 4px 2px 4px 0;
    display: inline-flex;
    position: relative;

    &:last-child {
      margin-left: 2px;
    }

    &:hover {
      .split-button-seperator {
        padding: 12px 0;
        margin: 1px 0;
        box-shadow: 0 0 0 1px hsla(0, 0%, 100%, 0.03);
        transition-property: padding;
        transition-duration: 10ms;
        transition-timing-function: ease;
      }

      .renderer-controls-button {
        outline: 0;
        box-shadow: 0 1px 0 hsla(0, 0%, 100%, 0.05) inset,
          0 0 1px hsla(0, 0%, 100%, 0.15) inset, 0 0 1px hsla(0, 0%, 0%, 0.05);
        z-index: 199;
        background-image: linear-gradient(
          hsla(0, 0%, 100%, 0.05),
          hsla(0, 0%, 100%, 0)
        );
        background-clip: padding-box;
        border: 1px solid hsla(0, 0%, 0%, 0.35);
        border-color: hsla(0, 0%, 0%, 0.32) hsla(0, 0%, 0%, 0.38)
          hsla(0, 0%, 0%, 0.42);
      }
    }

    .split-button-seperator {
      padding: 8px 0;
      width: 1px;
      background-color: hsla(0, 0%, 0%, 0.5);
      z-index: 99;
      box-shadow: 0 0 0 1px hsla(0, 0%, 100%, 0.08);
      display: inline-block;
      margin: 5px 0;
    }

    .renderer-controls-button {
      position: relative;
      min-width: 16px;
      padding: 2px 6px 0;
      border: 1px solid transparent;
      border-radius: 2px;
      color: hsla(0, 0%, 100%, 0.8);
      font-size: 12px;
      line-height: 14px;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
      cursor: default;
      transition-property: background-color, border-color, box-shadow;
      transition-duration: 150ms;
      transition-timing-function: ease;
      background: none;
      width: 32px;
      height: 25px;

      &:first-child {
        margin: 0;
        margin-right: -1px;
        border-top-left-radius: 2px;
        border-bottom-left-radius: 2px;
        border-right-color: transparent;
      }

      &:last-child {
        position: relative;
        margin: 0;
        margin-left: -1px;
        border-top-right-radius: 2px;
        border-bottom-right-radius: 2px;
        border-left-color: transparent;
      }

      &:hover,
      &:focus {
        outline: 0;
        background-color: hsla(0, 0%, 0%, 0.2);
        box-shadow: 0 1px 0 hsla(0, 0%, 100%, 0.05) inset,
          0 0 1px hsla(0, 0%, 100%, 0.15) inset, 0 0 1px hsla(0, 0%, 0%, 0.05);
        z-index: 199;
        background-image: linear-gradient(
          hsla(0, 0%, 100%, 0.05),
          hsla(0, 0%, 100%, 0)
        );
        background-clip: padding-box;
        border: 1px solid hsla(0, 0%, 0%, 0.35);
        border-color: hsla(0, 0%, 0%, 0.32) hsla(0, 0%, 0%, 0.38)
          hsla(0, 0%, 0%, 0.42);
      }

      .zoom-out-label {
        display: inline-block;
        width: 0;
        height: 0;
        overflow: hidden;

        &:before {
          position: absolute;
          display: inline-block;
          top: 4px;
          left: 7px;

          content: url('assets/toolbarButton-zoomOut.png');

          @media screen and (-webkit-min-device-pixel-ratio: 2),
            screen and (min-resolution: 2dppx) {
            content: url('assets/toolbarButton-zoomOut@2x.png');
            transform: scale(0.5);
            top: -5px;
            left: -1px;
          }
        }
      }

      .zoom-in-label {
        display: inline-block;
        width: 0;
        height: 0;
        overflow: hidden;

        &:before {
          position: absolute;
          display: inline-block;
          top: 4px;
          left: 7px;

          content: url('assets/toolbarButton-zoomIn.png');

          @media screen and (-webkit-min-device-pixel-ratio: 2),
            screen and (min-resolution: 2dppx) {
            content: url('assets/toolbarButton-zoomIn@2x.png');
            transform: scale(0.5);
            top: -5px;
            left: -1px;
          }
        }
      }

      .rotate-right-label {
        display: inline-block;
        width: 0;
        height: 0;
        overflow: hidden;

        &:before {
          position: absolute;
          display: inline-block;
          top: 4px;
          left: 7px;

          content: url('assets/secondaryToolbarButton-rotateCw.png');

          @media screen and (-webkit-min-device-pixel-ratio: 2),
            screen and (min-resolution: 2dppx) {
            content: url('assets/secondaryToolbarButton-rotateCw@2x.png');
            transform: scale(0.5);
            top: -5px;
            left: -1px;
          }
        }
      }

      .rotate-left-label {
        display: inline-block;
        width: 0;
        height: 0;
        overflow: hidden;

        &:before {
          position: absolute;
          display: inline-block;
          top: 4px;
          left: 7px;

          content: url('assets/secondaryToolbarButton-rotateCcw.png');

          @media screen and (-webkit-min-device-pixel-ratio: 2),
            screen and (min-resolution: 2dppx) {
            content: url('assets/secondaryToolbarButton-rotateCcw@2x.png');
            transform: scale(0.5);
            top: -5px;
            left: -1px;
          }
        }
      }

      .download-label {
        display: inline-block;
        width: 0;
        height: 0;
        overflow: hidden;

        &:before {
          position: absolute;
          display: inline-block;
          top: 4px;
          left: 7px;

          content: url('assets/toolbarButton-download.png');

          @media screen and (-webkit-min-device-pixel-ratio: 2),
            screen and (min-resolution: 2dppx) {
            content: url('assets/toolbarButton-download@2x.png');
            transform: scale(0.5);
            top: -5px;
            left: -1px;
          }
        }
      }

      .print-label {
        display: inline-block;
        width: 0;
        height: 0;
        overflow: hidden;

        &:before {
          position: absolute;
          display: inline-block;
          top: 4px;
          left: 7px;

          content: url('assets/toolbarButton-print.png');

          @media screen and (-webkit-min-device-pixel-ratio: 2),
            screen and (min-resolution: 2dppx) {
            content: url('assets/toolbarButton-print.png');
            transform: scale(0.5);
            top: -5px;
            left: -1px;
          }
        }
      }
    }
  }
}

